study-text/ingress-nginx/simple-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: echo
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
